Deploy2services/microsvc/templates/service.yaml
# Blog Service
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
# AllCourse Service
apiVersion: v1
kind: Service
metadata:
  name: allcourse-service
spec:
  selector:
    app: allcourse
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
